# rusty-packets

./: .gitignore  Cargo.toml  README.md
generic_packet_derive/: Cargo.toml
generic_packet_derive/src/: lib.rs
minecraft_type_derive/: Cargo.toml
minecraft_type_derive/src/: lib.rs
packet_serde_derive/: Cargo.toml
packet_serde_derive/src/: lib.rs
src/: main.rs  minecraft.rs  utils.rs
src/minecraft/: application.rs  clientbound.rs  mod.rs  packet.rs  serverbound.rs  types.rs
src/minecraft/application/: events.rs  mod.rs
src/minecraft/client/: login.rs
src/minecraft/client/configuration/: client_information.rs  client_packs.rs  configuration_acknowledged.rs  cookie_response.rs  keepalive.rs  mod.rs  ping.rs  pong.rs
src/minecraft/client/handshake/: handshake_start.rs  mod.rs
src/minecraft/client/login/: cookie_response.rs  encryption_response.rs  login_acknowledged.rs  login_start.rs  mod.rs  plugin_response.rs
src/minecraft/client/play/: keepalive.rs
src/minecraft/client/status/: ping.rs  request.rs
src/minecraft/clientbound/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
src/minecraft/connection/: events.rs  mod.rs
src/minecraft/packets/: field.rs  mod.rs  packet.rs
src/minecraft/packets/client/: client_info.rs  mod.rs  (+8 more)
src/minecraft/server/: mod.rs  play.rs
src/minecraft/serverbound/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
src/minecraft/text/: mod.rs
src/minecraft/types/: mod.rs  nbt.rs
src/utils/: ansi.rs  logging.rs  mod.rs
src/utils/ansi/: char.rs  string.rs
src/utils/logging/: mod.rs
(+100 files in other folders)
